
message PingRequest { string from_id=1; uint64 from_incarnation=2; }
message PingResponse { bool ok=1; }

message Digest { string id=1; uint64 incarnation=2; uint32 state=3; }

message PushPullRequest {
  string from_id=1;
  repeated Digest digests=2;
  repeated Member full_members=3;
}

message PushPullResponse {
  repeated Member delta=1;
}